# surgical-safety-op-list-agent

./: .gitignore  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/oplist_agent/domain/: events.py  models.py
src/oplist_agent/persistence/: event_store.py
tests/: test_domain_models.py
